tests/baselines/reference/parserErrorRecovery_ClassElement3.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement3.ts(2,4): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement3.ts(5,4): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement3.ts(7,5): error TS1005: '}' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement3.ts (3 errors) ====
    module M {
       |
       ~
!!! error TS1128: Declaration or statement expected.
       class C {
       }
       |
       ~
!!! error TS1128: Declaration or statement expected.
       enum E {
       }
        
!!! error TS1005: '}' expected.